# gen_ai

./: .gitignore  README.md  crawling_news.py  play_with_openai.py
chatbot/: generation_1.py  generation_2.py  generation_3.py  generation_4.py  prac_langchain.py
chatbot/ui/: app.py
context_engineering/: 02_tabular_data_context_engineering.ipynb  04_research_agent.ipynb  map_reduce.md  part02_chapter04_async_parallel_agent.ipynb
context_engineering/pre_built_agent/: 00-Deep-Agent-Detail.ipynb  02_Context-Offloading.ipynb  03-Sub-Agent-Delegation.ipynb
create_agent/: create_agnet.ipynb
db/: chroma.sqlite3
intent_chatbot/: api_custom.py  api_multi_prompt.py  custom_chains.py  multi_prompt_chains.py
langgraph/: crew_prac.py  crew_search_tool.py
langgraph/crewai/: crew_prac.py  (+2 more)
pre_built_agent/: part02_chapter03_prebuilt_agent.ipynb
pre_built_agent/실습_part02_deep_agent/: README.md  appendix_testing_guide.ipynb  env.example  pyproject.toml  utils.py
pre_built_agent/실습_part02_deep_agent/01_deep_agents/: 00-Deep-Agent-Detail.ipynb  01_TODO_Planning.ipynb  __init__.py  prompts.py
pre_built_agent/실습_part02_deep_agent/01_deep_agents/tools/: delegation_tools.py  file_tools.py  todo_tools.py
pre_built_agent/실습_part02_deep_agent/__MACOSX/research_agent/: ._tools.py
pre_built_agent/실습_part02_deep_agent/pydantic-deepagents/: README.md
pre_built_agent/실습_part02_deep_agent/research_agent/: __init__.py  agent.py  prompts.py
rag_chatbot/: api.py  chains.py  langchain_rag.py
web_history_chatbot/: api.py  chains.py  database.py  memory.py  web_search.py
(+46 files in other folders)
