[project]
name = "deep-agent-basic-and-deep-research"
version = "0.1.0"
description = "Deep Agent Basic and Deep Research"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.1.2",
    "pydantic>=2.0.0",
    "rich>=14.0.0",
    "tavily-python>=0.6.0",
    "markdownify>=1.2.0",
    "deepagents>=0.2.6",
    "python-dotenv>=1.0.0",
    "langgraph-cli[inmem]>=0.1.55",
    "pytz>=2025.2",
]

[dependency-groups]
dev = [
    "agentevals>=0.0.9",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mypy>=1.19.0",
    "nbconvert>=7.16.6",
    "nbmake>=1.5.5",
    "ruff>=0.14.9",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["research_agent"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = ["UP006", "UP007", "UP035", "D417", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
